预约管理页面

--- a/EasyWeb-master/src/main/resources/static/pages/meetingManagement/meetingroomAdd.html
+++ b/EasyWeb-master/src/main/resources/static/pages/meetingManagement/meetingroomAdd.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>会议室信息</title>
+    <title>会议室信息添加</title>
     <link rel="icon" href="../../assets/images/favicon.ico"/>
     <link rel="stylesheet" href="../../assets/libs/layui/css/layui.css" media="all">
     <link rel="stylesheet" href="../../assets/common.css" media="all">
@@ -42,7 +42,14 @@
                     </div>
               </div>
          </form>
-
+         <!-- 图片 -->
+   <!--       <div class="layui-form-item">
+                    <label class="layui-form-label">会议室图片</label>
+                    <div class="layui-input-block">
+                         <input type="text" name="meetingRoomPeoples" id="meetingRoomPeoples" style= "width: 150px;"  required  lay-verify="required|number"  placeholder="请输入人数"  autocomplete="off" class="layui-input">
+                    </div>
+              </div>
+ -->
          <div class="layui-form-item">
                 <label class="layui-form-label">设备</label>
                 <div class="layui-input-block">
