--- a/EasyWeb-master/src/main/resources/static/index.html
+++ b/EasyWeb-master/src/main/resources/static/index.html
@@ -17,8 +17,8 @@
         <div class="layui-logo">会议室管理平台</div>
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item" lay-unselect>
-                <a  target="_blank" id="ag">
-                    <i class="layui-icon layui-icon-website"></i>
+                <a  target="_blank" id="ag" lay-href="pages/announcementModel/announcement.html">
+                    <i class="layui-icon layui-icon-website" ></i>
                 </a>
             </li>
         </ul>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="layui-body">
-        <iframe name="body" class="admin-iframe" src="pages/client.html" frameborder="0"></iframe>
+        <iframe name="body" class="admin-iframe" src="pages/announcementModel/announcement.html" frameborder="0"></iframe>
     </div>
 </div>
 <!-- 修改密码弹窗 -->
