预约信息显示

--- a/EasyWeb-master/src/main/resources/static/index.html
+++ b/EasyWeb-master/src/main/resources/static/index.html
@@ -59,7 +59,7 @@
                     </dl>
                 </li> -->
                 <li class="layui-nav-item">
-                    <a><i class="layui-icon layui-icon-spread-left"></i>会议室管理</a>
+                    <a><i class="layui-icon layui-icon-spread-left"></i>&emsp;会议室管理</a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="pages/meetingManagement/meetingroom.html">会议室信息</a></dd>
                         <dd><a lay-href="pages/meetingManagement/equipment.html">设备管理</a></dd>
@@ -67,13 +67,14 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a><i class="layui-icon layui-icon-form"></i>预约管理</a>
+                    <a><i class="layui-icon layui-icon-form"></i>&emsp;预约管理</a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="pages/reservationModule/reservationInfo.html">会议预约</a></dd>
+                         <dd><a lay-href="pages/reservationModule/reservationMine.html">我的预约</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a><i class="layui-icon layui-icon-friends"></i>个人管理</a>
+                    <a><i class="layui-icon layui-icon-friends"></i>&emsp;个人管理</a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="pages/personalManagement/personalinfo.html">个人信息</a></dd>
                     </dl>
